# rethinking_stats_and_PyMC

./: main.py  pyproject.toml  skills-lock.json
Ch1_2_3_rethinking_stats/: ch2_3.py  marcelo_fischer_week_1.py
Ch2_3_rethinking_stats/: ch2_3.py
Ch2_rethinking_stats/: ch2.py  main.py
Ch_1_2_3/: ch2_3.py  marcelo_fischer_week_1.py  marcelo_fischer_week_2.py
Ch_4/: Ch_4.py  Ch_4_exercises.py  marcelo_fischer_week_3.py  marcelo_fischer_week_4.py
Ch_4_rethinking_stats/: Ch_4.py  Ch_4_exercises.py  marcelo_fischer_week_3.py  marcelo_fischer_week_4.py
Ch_4_rethinking_stats/__marimo__/session/: Ch_4.py.json
Ch_5/: Ch_5.py
Ch_5_6_7/: Ch_5.py  ch_6.py  linear_models_funcs.py  marcelo_fischer_week_5.py
Ch_5_rethinking_stats/: Ch_5.py  marcelo_fischer_week_5.py
bayesian_analysis_with_python/: chapter5.py  chapter_1.py  chapter_2.py  chapter_3.py  chapter_4.py  chapter_4_temp.py  chapter_5.py
