[project]
name = "rethinking-stats-and-pymc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.25.0",
    "marimo[recommended]>=0.14.10",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "pymc>=5.23.0",
    "pytest>=8.4.1",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.13.0",
    "ruff>=0.12.2",
    "scipy>=1.16.0",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
]
